<resources>
    <string name="app_name">Кулинарная книга</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Гость</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_favourites">Избранное</string>
    <string name="menu_authorization">Авторизация</string>

    <string name="menu_SecondFragment">Информация о блюде</string>
    <string name="menu_RegFragment">Регистрация</string>



    <string-array name="tags_sort">
        <item>Добавить фильтр тэгов</item>
        <item>Первое блюдо</item>
        <item>Второе Блюдо</item>

        <item>Завтрак</item>
        <item>Напитки</item>
        <item>Закуска</item>
        <item>Десерт</item>

    </string-array>

    <string-array name="all_sort">
        <item>рейтинг(по убыванию)</item>
        <item>рейтинг(по возрастанию)</item>

        <item>название(по алфавиту)</item>
        <item>название(в обратном порядке)</item>
    </string-array>
</resources>